@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-05T02:19:17Z",
-  "count" : 352,
+  "timestamp" : "2022-07-18T02:20:19Z",
+  "count" : 284,
   "count_minmax" : [ 52, 352 ],
-  "count_decinc" : [ -0, +352 ],
+  "count_decinc" : [ -68, +352 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
